--- a/Attendance_Animation.ipynb
+++ b/Attendance_Animation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk4Hiicj6bgBf0Derlj0QA",
+      "authorship_tag": "ABX9TyMeHBerSR6fFSQstppCBrj+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,8 +303,7 @@
         "  # avoid changing axes, titles, etc in updates: low fps issue\n",
         "  # ax.set_title(y_values[i])\n",
         "  if i not in [0, 1] and i <= actual_no_of_frames:\n",
-        "    print(i-1)\n",
-        "    plt.text(x=i-1, y=y_values[i-1], s=y_values[i-1], backgroundcolor=\"white\", size=10)\n",
+        "    ax.text(x=i-1, y=y_values[i-1], s=y_values[i-1], backgroundcolor=\"white\", size=10)\n",
         "  line.set_xdata(x_values[:i])\n",
         "  line.set_ydata(y_values[:i])\n",
         "\n",
@@ -331,7 +330,7 @@
       "source": [
         "# print(x_values)\n",
         "\n",
-        "animation = FuncAnimation(fig, func=animation_frame, frames=total_no_of_frames, interval=interval)\n",
+        "animation = FuncAnimation(fig, func=animation_frame, frames=total_no_of_frames, interval=interval, blit=True)\n",
         "\n",
         "# setting up writer object\n",
         "Writer = writers['ffmpeg']\n",
@@ -343,7 +342,7 @@
       "metadata": {
         "id": "31VhT4EqdDHL"
       },
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
     }
   ]
